--- a/clean.ipynb
+++ b/clean.ipynb
@@ -26,135 +26,139 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>country</th>\n",
-       "      <th>date_parsed</th>\n",
-       "      <th>weekday</th>\n",
-       "      <th>day</th>\n",
-       "      <th>month</th>\n",
-       "      <th>name_of_holiday</th>\n",
-       "      <th>date_of_holiday</th>\n",
-       "      <th>year_of_event</th>\n",
-       "      <th>independence_from</th>\n",
-       "      <th>event_commemorated_and_notes</th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>team</th>\n",
+       "      <th>noc</th>\n",
+       "      <th>games</th>\n",
        "      <th>year</th>\n",
-       "      <th>date_mdy</th>\n",
+       "      <th>season</th>\n",
+       "      <th>city</th>\n",
+       "      <th>sport</th>\n",
+       "      <th>event</th>\n",
+       "      <th>medal</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>1919-08-19</td>\n",
-       "      <td>Tuesday</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>Aug</td>\n",
-       "      <td>Afghan Independence Day (Afghan Victory Day)</td>\n",
-       "      <td>August 19</td>\n",
-       "      <td>1919.0</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>Anglo-Afghan Treaty of 1919 or Treaty of Rawal...</td>\n",
-       "      <td>1919.0</td>\n",
-       "      <td>August 19, 1919</td>\n",
+       "      <td>1</td>\n",
+       "      <td>A Dijiang</td>\n",
+       "      <td>M</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>China</td>\n",
+       "      <td>CHN</td>\n",
+       "      <td>1992 Summer</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>Basketball</td>\n",
+       "      <td>Basketball Men's Basketball</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>1912-11-28</td>\n",
-       "      <td>Thursday</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>Nov</td>\n",
-       "      <td>Flag Day (Dita e Flamurit)</td>\n",
-       "      <td>November 28</td>\n",
-       "      <td>1912.0</td>\n",
-       "      <td>Ottoman Empire</td>\n",
-       "      <td>Albanian Declaration of Independence. The foll...</td>\n",
-       "      <td>1912.0</td>\n",
-       "      <td>November 28, 1912</td>\n",
+       "      <td>2</td>\n",
+       "      <td>A Lamusi</td>\n",
+       "      <td>M</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>China</td>\n",
+       "      <td>CHN</td>\n",
+       "      <td>2012 Summer</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Judo</td>\n",
+       "      <td>Judo Men's Extra-Lightweight</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>1962-07-05</td>\n",
-       "      <td>Thursday</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Jul</td>\n",
-       "      <td>Independence Day</td>\n",
-       "      <td>July 5</td>\n",
-       "      <td>1962.0</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Algeria gained independence following the Alge...</td>\n",
-       "      <td>1962.0</td>\n",
-       "      <td>July 5, 1962</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Gunnar Nielsen Aaby</td>\n",
+       "      <td>M</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>1920 Summer</td>\n",
+       "      <td>1920</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>Antwerpen</td>\n",
+       "      <td>Football</td>\n",
+       "      <td>Football Men's Football</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Andorra</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Edgar Lindenau Aabye</td>\n",
+       "      <td>M</td>\n",
+       "      <td>34.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Denmark/Sweden</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>1900 Summer</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>Tug-Of-War</td>\n",
+       "      <td>Tug-Of-War Men's Tug-Of-War</td>\n",
+       "      <td>Gold</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>1975-11-11</td>\n",
-       "      <td>Tuesday</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>Nov</td>\n",
-       "      <td>Independence Day</td>\n",
-       "      <td>November 11</td>\n",
-       "      <td>1975.0</td>\n",
-       "      <td>Portugal</td>\n",
-       "      <td>The Alvor Agreement, signed on 15 January 1975...</td>\n",
-       "      <td>1975.0</td>\n",
-       "      <td>November 11, 1975</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Christine Jacoba Aaftink</td>\n",
+       "      <td>F</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>185.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>NED</td>\n",
+       "      <td>1988 Winter</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Calgary</td>\n",
+       "      <td>Speed Skating</td>\n",
+       "      <td>Speed Skating Women's 500 metres</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       country date_parsed   weekday   day month  \\\n",
-       "0  Afghanistan  1919-08-19   Tuesday  19.0   Aug   \n",
-       "1      Albania  1912-11-28  Thursday  28.0   Nov   \n",
-       "2      Algeria  1962-07-05  Thursday   5.0   Jul   \n",
-       "3      Andorra         NaN       NaN   NaN   NaN   \n",
-       "4       Angola  1975-11-11   Tuesday  11.0   Nov   \n",
+       "   id                      name sex   age  height  weight            team  \\\n",
+       "0   1                 A Dijiang   M  24.0   180.0    80.0           China   \n",
+       "1   2                  A Lamusi   M  23.0   170.0    60.0           China   \n",
+       "2   3       Gunnar Nielsen Aaby   M  24.0     NaN     NaN         Denmark   \n",
+       "3   4      Edgar Lindenau Aabye   M  34.0     NaN     NaN  Denmark/Sweden   \n",
+       "4   5  Christine Jacoba Aaftink   F  21.0   185.0    82.0     Netherlands   \n",
        "\n",
-       "                                name_of_holiday date_of_holiday  \\\n",
-       "0  Afghan Independence Day (Afghan Victory Day)       August 19   \n",
-       "1                    Flag Day (Dita e Flamurit)     November 28   \n",
-       "2                              Independence Day          July 5   \n",
-       "3                                           NaN             NaN   \n",
-       "4                              Independence Day     November 11   \n",
+       "   noc        games  year  season       city          sport  \\\n",
+       "0  CHN  1992 Summer  1992  Summer  Barcelona     Basketball   \n",
+       "1  CHN  2012 Summer  2012  Summer     London           Judo   \n",
+       "2  DEN  1920 Summer  1920  Summer  Antwerpen       Football   \n",
+       "3  DEN  1900 Summer  1900  Summer      Paris     Tug-Of-War   \n",
+       "4  NED  1988 Winter  1988  Winter    Calgary  Speed Skating   \n",
        "\n",
-       "   year_of_event independence_from  \\\n",
-       "0         1919.0    United Kingdom   \n",
-       "1         1912.0    Ottoman Empire   \n",
-       "2         1962.0            France   \n",
-       "3            NaN               NaN   \n",
-       "4         1975.0          Portugal   \n",
-       "\n",
-       "                        event_commemorated_and_notes    year  \\\n",
-       "0  Anglo-Afghan Treaty of 1919 or Treaty of Rawal...  1919.0   \n",
-       "1  Albanian Declaration of Independence. The foll...  1912.0   \n",
-       "2  Algeria gained independence following the Alge...  1962.0   \n",
-       "3                                                NaN     NaN   \n",
-       "4  The Alvor Agreement, signed on 15 January 1975...  1975.0   \n",
-       "\n",
-       "            date_mdy  \n",
-       "0    August 19, 1919  \n",
-       "1  November 28, 1912  \n",
-       "2       July 5, 1962  \n",
-       "3                NaN  \n",
-       "4  November 11, 1975  "
+       "                              event medal  \n",
+       "0       Basketball Men's Basketball   NaN  \n",
+       "1      Judo Men's Extra-Lightweight   NaN  \n",
+       "2           Football Men's Football   NaN  \n",
+       "3       Tug-Of-War Men's Tug-Of-War  Gold  \n",
+       "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
      "execution_count": 1,
@@ -165,7 +169,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('holidays.csv')\n",
+    "df = pd.read_csv('olympics.csv')\n",
     "df.head()"
    ]
   },
@@ -175,174 +179,69 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>country</th>\n",
-       "      <th>date_parsed</th>\n",
-       "      <th>weekday</th>\n",
-       "      <th>day</th>\n",
-       "      <th>month</th>\n",
-       "      <th>name_of_holiday</th>\n",
-       "      <th>date_of_holiday</th>\n",
-       "      <th>year_of_event</th>\n",
-       "      <th>independence_from</th>\n",
-       "      <th>event_commemorated_and_notes</th>\n",
-       "      <th>year</th>\n",
-       "      <th>date_mdy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>1919-08-19</td>\n",
-       "      <td>Tuesday</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>Aug</td>\n",
-       "      <td>Afghan Independence Day (Afghan Victory Day)</td>\n",
-       "      <td>August 19</td>\n",
-       "      <td>1919.0</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>Anglo-Afghan Treaty of 1919 or Treaty of Rawal...</td>\n",
-       "      <td>1919.0</td>\n",
-       "      <td>August 19, 1919</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>1912-11-28</td>\n",
-       "      <td>Thursday</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>Nov</td>\n",
-       "      <td>Flag Day (Dita e Flamurit)</td>\n",
-       "      <td>November 28</td>\n",
-       "      <td>1912.0</td>\n",
-       "      <td>Ottoman Empire</td>\n",
-       "      <td>Albanian Declaration of Independence. The foll...</td>\n",
-       "      <td>1912.0</td>\n",
-       "      <td>November 28, 1912</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>1962-07-05</td>\n",
-       "      <td>Thursday</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Jul</td>\n",
-       "      <td>Independence Day</td>\n",
-       "      <td>July 5</td>\n",
-       "      <td>1962.0</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Algeria gained independence following the Alge...</td>\n",
-       "      <td>1962.0</td>\n",
-       "      <td>July 5, 1962</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>1975-11-11</td>\n",
-       "      <td>Tuesday</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>Nov</td>\n",
-       "      <td>Independence Day</td>\n",
-       "      <td>November 11</td>\n",
-       "      <td>1975.0</td>\n",
-       "      <td>Portugal</td>\n",
-       "      <td>The Alvor Agreement, signed on 15 January 1975...</td>\n",
-       "      <td>1975.0</td>\n",
-       "      <td>November 11, 1975</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Antigua and Barbuda</td>\n",
-       "      <td>1981-11-01</td>\n",
-       "      <td>Sunday</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Nov</td>\n",
-       "      <td>Independence Day</td>\n",
-       "      <td>November 1</td>\n",
-       "      <td>1981.0</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>The effective date of the Antigua Termination ...</td>\n",
-       "      <td>1981.0</td>\n",
-       "      <td>November 1, 1981</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               country date_parsed   weekday   day month  \\\n",
-       "0          Afghanistan  1919-08-19   Tuesday  19.0   Aug   \n",
-       "1              Albania  1912-11-28  Thursday  28.0   Nov   \n",
-       "2              Algeria  1962-07-05  Thursday   5.0   Jul   \n",
-       "4               Angola  1975-11-11   Tuesday  11.0   Nov   \n",
-       "5  Antigua and Barbuda  1981-11-01    Sunday   1.0   Nov   \n",
-       "\n",
-       "                                name_of_holiday date_of_holiday  \\\n",
-       "0  Afghan Independence Day (Afghan Victory Day)       August 19   \n",
-       "1                    Flag Day (Dita e Flamurit)     November 28   \n",
-       "2                              Independence Day          July 5   \n",
-       "4                              Independence Day     November 11   \n",
-       "5                              Independence Day      November 1   \n",
-       "\n",
-       "   year_of_event independence_from  \\\n",
-       "0         1919.0    United Kingdom   \n",
-       "1         1912.0    Ottoman Empire   \n",
-       "2         1962.0            France   \n",
-       "4         1975.0          Portugal   \n",
-       "5         1981.0    United Kingdom   \n",
-       "\n",
-       "                        event_commemorated_and_notes    year  \\\n",
-       "0  Anglo-Afghan Treaty of 1919 or Treaty of Rawal...  1919.0   \n",
-       "1  Albanian Declaration of Independence. The foll...  1912.0   \n",
-       "2  Algeria gained independence following the Alge...  1962.0   \n",
-       "4  The Alvor Agreement, signed on 15 January 1975...  1975.0   \n",
-       "5  The effective date of the Antigua Termination ...  1981.0   \n",
-       "\n",
-       "            date_mdy  \n",
-       "0    August 19, 1919  \n",
-       "1  November 28, 1912  \n",
-       "2       July 5, 1962  \n",
-       "4  November 11, 1975  \n",
-       "5   November 1, 1981  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 39783 entries, 3 to 271103\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   id      39783 non-null  int64  \n",
+      " 1   name    39783 non-null  object \n",
+      " 2   sex     39783 non-null  object \n",
+      " 3   age     39051 non-null  float64\n",
+      " 4   height  31072 non-null  float64\n",
+      " 5   weight  30456 non-null  float64\n",
+      " 6   team    39783 non-null  object \n",
+      " 7   noc     39783 non-null  object \n",
+      " 8   games   39783 non-null  object \n",
+      " 9   year    39783 non-null  int64  \n",
+      " 10  season  39783 non-null  object \n",
+      " 11  city    39783 non-null  object \n",
+      " 12  sport   39783 non-null  object \n",
+      " 13  event   39783 non-null  object \n",
+      " 14  medal   39783 non-null  object \n",
+      "dtypes: float64(3), int64(2), object(10)\n",
+      "memory usage: 4.9+ MB\n"
+     ]
     }
    ],
    "source": [
-    "clean = df.dropna(subset=['date_parsed'])\n",
-    "clean.head()"
+    "df.dropna(subset=['medal'], inplace=True)\n",
+    "df.head()\n",
+    "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
-    "clean.to_csv('cleaned_data.csv', index=False)\n"
+    "\n",
+    "medal_counts = df.groupby('noc').size().reset_index(name='total_medals')\n",
+    "\n",
+    "# Filter countries with more than 1000 medals\n",
+    "countries_with_1000_medals = medal_counts[medal_counts['total_medals'] >= 1000]['noc']\n",
+    "\n",
+    "# Keep only the entries for countries with more than 1000 medals\n",
+    "df_filtered = df[df['noc'].isin(countries_with_1000_medals)]\n",
+    "\n",
+    "countries_with_1000_medals.head()\n",
+    "df_filtered.to_csv('clean_olympics.csv', index=False)\n"
    ]
   }
  ],
